# Inflector

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  METHODS.md  PULL_REQUEST_TEMPLATE.md  README.md  benchmark  changelog.md  travis-after-success.sh
.github/workflows/: cargo_test.yml
src/: camelcase.rs  kebabcase.rs  lib.rs  snakecase.rs
src/cases/: mod.rs
src/cases/camelcase/: camelcase_test.rs  mod.rs
src/cases/case/: mod.rs
src/cases/classcase/: classcase_test.rs  mod.rs
src/cases/classcases/: mod.rs
src/cases/kebabcase/: kebabcase_test.rs  mod.rs
src/cases/lowercase/: lower_test.rs  mod.rs
src/cases/pascalcase/: mod.rs
src/cases/screamingsnakecase/: mod.rs
src/cases/sentencecase/: mod.rs  sentencecase_test.rs
src/cases/snakecase/: mod.rs  snakecase_test.rs
src/cases/tablecase/: mod.rs
src/cases/titlecase/: mod.rs  titlecase_test.rs
src/cases/traincase/: mod.rs
src/cases/uppercase/: mod.rs  upper_test.rs
src/numbers/: mod.rs
src/numbers/deordinalize/: deordinalize_test.rs  mod.rs
src/numbers/ordinalize/: mod.rs  ordinalize_test.rs
src/string/: mod.rs
src/string/constants/: mod.rs
src/string/deconstantize/: deconstantize_test.rs  mod.rs
src/string/demodulize/: demodulize_test.rs  mod.rs
src/string/pluralize/: mod.rs
src/string/singularize/: mod.rs
src/suffix/: mod.rs
src/suffix/foreignkey/: foreignkey_test.rs  mod.rs
src/utils/: mod.rs
tests/: lib.rs
