[package]
name = "Inflector"
version = "0.11.1"
authors = ["Josh Teeter<joshteeter@gmail.com>"]
exclude = [".travis.yml", ".gitignore"]
readme = "README.md"
repository = "https://github.com/whatisinternet/inflector"
documentation = "https://docs.rs/Inflector"
homepage = "https://github.com/whatisinternet/inflector"
license="BSD-2-Clause"
description = """
Adds String based inflections for Rust. Snake, kebab, camel, sentence, class, title and table cases as well as ordinalize, deordinalize, demodulize, foreign key, and pluralize/singularize are supported as both traits and pure functions acting on String types.
"""
keywords = ["pluralize", "Inflector", "camel", "snake", "inflection"]
categories = ["text-processing", "value-formatting"]

[badges]
travis-ci = { repository = "whatisinternet/Inflector" }

[features]
default = ['heavyweight']
unstable = []
heavyweight = ['regex', 'lazy_static']

[lib]
name = "inflector"

[dependencies]
regex = {version = "0.2", optional = true}
lazy_static = {version = "0.2.9", optional = true}
