[package]
name = "Inflector"
version = "0.11.4"
authors = ["Josh Teeter<joshteeter@gmail.com>"]
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md"
]
readme = "README.md"
repository = "https://github.com/whatisinternet/inflector"
documentation = "https://docs.rs/Inflector"
homepage = "https://github.com/whatisinternet/inflector"
license="BSD-2-Clause"
description = """
Adds String based inflections for Rust. Snake, kebab, camel, sentence, class, title and table cases as well as ordinalize, deordinalize, demodulize, foreign key, and pluralize/singularize are supported as both traits and pure functions acting on String types.
"""
keywords = ["pluralize", "Inflector", "camel", "snake", "inflection"]
categories = ["text-processing", "value-formatting"]

[badges]
travis-ci = { repository = "whatisinternet/Inflector" }

[features]
default = ['heavyweight']
unstable = []
heavyweight = ['regex', 'lazy_static']

[lib]
name = "inflector"

[dependencies]
regex = {version = "1.1", optional = true}
lazy_static = {version = "1.2.0", optional = true}
